[package]
name = "qube-name"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ctor = "0.4.2"
qube-core = { version = "0.1.0", path = "../qube-core" }

[lints]
workspace = true
