[package]
name = "qube-server"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
log = "0.4.29"
pretty_env_logger = "0.5.0"
qube-proto = { version = "0.1.0", path = "../qube-proto" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt", "rt-multi-thread"] }
uuid = "1.19.0"

[lints]
workspace = true
